# rapid-env

./: .gitignore  CHANGELOG.md  FUTURE.md  README.md  envsetup.py  manage.py  pytest.ini  requirements.txt  setup.py
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
rapidenv/: .gitignore  __init__.py  __main__.py  conan.py  console_scripts.py
rapidenv/conan/: __init__.py  conan.py
rapidenv/docker/: docker.py
rapidenv/git/: __init__.py  git.py
rapidenv/git/templates/: .gitignore
rapidenv/helpers/: validate.py
rapidenv/misc/: set_activate_alias.py
rapidenv/os/: __init__.py  os.py
rapidenv/osh/: __init__.py  copy_large_files.py  download.py  osh.py
rapidenv/path/: __init__.py  path.py
rapidenv/process/: __init__.py  process.py
rapidenv/project/template/: activate_alias.txt  envsetup.py  mng  mng.bat
rapidenv/project/template/pybind11/: CMakeLists.txt  main.py
rapidenv/project/template/pybind11/cppmodule/: __init__.py
rapidenv/project/template/pybind11/src/: main.cpp
tests/: context.py  helpers.py  pytest.ini  test-requirements.txt  test_conan.py  test_console_scripts.py  test_console_scripts_mng.py  test_git.py  test_osh_download.py  test_oslib.py  test_package_dist.py  test_version.py
tests/conan_test_vector/: conanfile.tv.txt
tests/test_utils/: context.py
